--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "swiper": "^11.1.1",
-    "tailwind-scrollbar": "^3.1.0"
+    "tailwind-scrollbar": "^3.1.0",
+    "tsparticles": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
