--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "swiper": "^11.1.3",
     "tailwindcss": "^3.4.1",
