--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
+    "nodemailer": "^6.9.14",
     "postcss": "^8",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
