--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tsparticles": "^3.3.0"
   },
   "devDependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
