--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "nodemailer": "^6.9.14",
     "postcss": "^8",
     "react-hook-form": "^7.52.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
-    "react-toastify": "^10.0.5",
     "swiper": "^11.1.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
