--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-countup": "^6.4.2",
     "react-dom": "^18",
+    "sharp": "^0.33.4",
     "tailwind-scrollbar": "^3.1.0",
     "tsparticles": "^3.3.0"
   },
